Actualización de la aplicación: mejoras en la seguridad JWT, ajustes en la configuración de la base de datos y correcciones menores. Preparación para la migración de vistas de Thymeleaf a React.