@@ -4,7 +4,6 @@ import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
@@ -16,7 +15,7 @@ public class UploadFileService {
 	public String saveImage(MultipartFile file) throws IOException {
 		if (!file.isEmpty()) {
 			byte [] bytes = file.getBytes();
-			Path path = Paths.get(folder+file.getOriginalFilename());
+			Path path = Path.of(folder+file.getOriginalFilename());
 			Files.write(path, bytes);
 			return file.getOriginalFilename();
 		}
